--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@shohojdhara/atomix": "^0.3.1",
     "date-fns": "^3.6.0",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "sass": "^1.80.0"
+    "sass": "^1.80.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
